# model-scoreboard-mcp

./: README.md  SECURITY.md  pyproject.toml  server.json  server.py
.github/workflows/: codeql.yml  scorecard.yml
tests/: test_server.py
