[project]
name = "model-scoreboard-mcp"
version = "0.1.0"
description = "Track-record hive — rank models/agents (LLM/MoE/MoM/SLM/world/reasoning/multimodal) per task, route to the best, BFT-vote/improve. CSOAI fleet."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CSOAI-ORG"}]
dependencies = ["mcp>=1.0.0", "pydantic>=2.0.0"]
[project.scripts]
model-scoreboard-mcp = "server:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
